--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,6 +13,8 @@ squareupRetrofit = "3.0.0"
 squareupLogging = "5.1.0"
 jetbrainsSerialization = "1.9.0"
 jakewhartonRetrofit2Converter = "1.0.0"
+coil = "3.3.0"
+hiltCompose = "1.2.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -35,6 +37,8 @@ squareup-retrofit = { group = "com.squareup.retrofit2", name = "retrofit", versi
 squareup-logging = { group = "com.squareup.okhttp3", name = "logging-interceptor", version.ref = "squareupLogging" }
 jetbrains-serialization = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "jetbrainsSerialization" }
 jakewharton-retrofit2-converter = { group = "com.jakewharton.retrofit", name = "retrofit2-kotlinx-serialization-converter", version.ref = "jakewhartonRetrofit2Converter" }
+coil = { group = "io.coil-kt.coil3", name = "coil-compose", version.ref = "coil" }
+androidx-hilt-compose = { group = "androidx.hilt", name = "hilt-navigation-compose", version.ref = "hiltCompose" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
