--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,7 +6,7 @@ junit = "4.13.2"
 junitVersion = "1.3.0"
 espressoCore = "3.7.0"
 lifecycleRuntimeKtx = "2.9.3"
-activityCompose = "1.10.1"
+activityCompose = "1.11.0"
 composeBom = "2025.08.01"
 googleHilt = "2.57.1"
 squareupRetrofit = "3.0.0"
@@ -15,9 +15,10 @@ jetbrainsSerialization = "1.9.0"
 jakewhartonRetrofit2Converter = "1.0.0"
 jakewhartonTimber = "5.0.1"
 coil = "3.3.0"
-hiltCompose = "1.2.0"
+hiltCompose = "1.3.0"
 googleLocation = "21.3.0"
 jetbrainsCoroutinesPlayServices = "1.10.2"
+androidxRoom = "2.8.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -47,6 +48,9 @@ androidx-hilt-compose = { group = "androidx.hilt", name = "hilt-navigation-compo
 jakewharton-timber = { group = "com.jakewharton.timber", name = "timber", version.ref = "jakewhartonTimber" }
 google-location = { group = "com.google.android.gms", name = "play-services-location", version.ref = "googleLocation" }
 jetbrains-coroutines-play-services = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-play-services", version.ref = "jetbrainsCoroutinesPlayServices" }
+androidx-room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "androidxRoom" }
+androidx-room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "androidxRoom" }
+androidx-room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "androidxRoom" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
